Test(QA): Reach coverage, improve UI and update docs